fixed gap on charter school page

--- a/artwebsite/src/CharterSchool.css
+++ b/artwebsite/src/CharterSchool.css
@@ -8,9 +8,10 @@
 
 .title-section{
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between; 
   align-items: center;
+  width: 90%; 
+  margin: 0 auto;
 }
 
 .charter-subtitle{
